# LibCMaker_FontConfig

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_fontconfig.cmake  lib_cmaker_fontconfig.cmake
ci/: ci_lib_params.sh
cmake/: FindFontConfig.cmake  cmr_build_rules_fontconfig.cmake  cmr_find_package_fontconfig.cmake  cmr_get_download_params_fontconfig.cmake
cmake/modules/: FindFontConfig.cmake  FindFontconfig.cmake  cmr_build_rules_fontconfig.cmake  cmr_fontconfig_cmaker.cmake  cmr_fontconfig_get_download_params.cmake  cmr_get_download_params_fontconfig.cmake
cmake/modules/fontconfig-2.11.95/: CMakeLists.txt  ConfigureChecks.cmake  config.h.in.cmake
cmake/modules/fontconfig-2.11.95/conf.d/: CMakeLists.txt
cmake/modules/fontconfig-2.11.95/fontconfig/: CMakeLists.txt
cmake/modules/fontconfig-2.11.95/src/: fcstdint.h
cmake/modules/fontconfig-2.13.0/: CMakeLists.txt  ConfigureChecks.cmake  config.h.in.cmake
cmake/modules/fontconfig-2.13.0/src/: fccache.c  fchash.c  fcint.h
example/TestCompileWithFontConfig/: .gitignore  CMakeLists.txt  fc-list.c  fc-query.c
patch/fontconfig-2.11.95/: CMakeLists.txt  ConfigureChecks.cmake
patch/fontconfig-2.11.95/cmake/modules/: CMakeTestInline.cmake
patch/fontconfig-2.13.0/: CMakeLists.txt  ConfigureChecks.cmake  config.h.in.cmake
patch/fontconfig-2.13.0/cmake/modules/: TestLargeFiles.cmake  TestLargeFiles.cpp.cmakein
patch/fontconfig-2.13.0/src/: fcstdint.h
patch/fontconfig-2.13.92/: CMakeLists.txt  ConfigureChecks.cmake  config.h.in.cmake
patch/fontconfig-2.13.92/cmake/modules/: CheckFileOffsetBits.cmake  TestFileOffsetBits.cpp  TestWindowsFSeek.cpp
patch/fontconfig-2.13.92/src/: fccache.c  fcint.h
samples/TestCompileWithFontConfig/: .gitignore  CMakeLists.txt  README.md
samples/TestCompileWithFontConfig/src/: example_test.cpp
samples/TestCompileWithFontConfig/test/: CMakeLists.txt
samples/ci_sample/: .gitignore
samples/ci_sample/test/: CMakeLists.txt
